--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -555,4 +555,16 @@ be temporary, and you can try again later.</li>
     <!-- Focus video strings -->
     <string name="menu_drawer_home">Home</string>
     <string name="menu_drawer_settings">Settings</string>
+
+    <!-- Home tile strings -->
+    <string name="tile_youtube_tv">Youtube TV</string>
+    <string name="tile_google_video_search">Google Videos</string>
+    <string name="tile_imdb">IMDB</string>
+    <string name="tile_rottentomatoes">Rotten Tomatoes</string>
+    <string name="tile_metacritic">Metacritic</string>
+    <string name="tile_fandango">Fandango</string>
+    <string name="tile_hollywood_reporter">The Hollywood Reporter</string>
+    <string name="tile_flickr">Flickr</string>
+    <string name="tile_instagram">Instagram</string>
+    <string name="tile_pinterest">Pinterest</string>
 </resources>
