Home tiles: eyeballed styles.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -557,13 +557,13 @@ be temporary, and you can try again later.</li>
     <string name="menu_drawer_settings">Settings</string>
 
     <!-- Home tile strings -->
-    <string name="tile_youtube_tv">Youtube TV</string>
+    <string name="tile_youtube_tv">YouTube</string>
     <string name="tile_google_video_search">Google Videos</string>
     <string name="tile_imdb">IMDB</string>
     <string name="tile_rottentomatoes">Rotten Tomatoes</string>
     <string name="tile_metacritic">Metacritic</string>
     <string name="tile_fandango">Fandango</string>
-    <string name="tile_hollywood_reporter">The Hollywood Reporter</string>
+    <string name="tile_hollywood_reporter">Hollywood Reporter</string>
     <string name="tile_flickr">Flickr</string>
     <string name="tile_instagram">Instagram</string>
     <string name="tile_pinterest">Pinterest</string>
