--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -558,7 +558,7 @@ be temporary, and you can try again later.</li>
 
     <!-- Home tile strings -->
     <string name="tile_youtube_tv">YouTube</string>
-    <string name="tile_google_video_search">Google Videos</string>
+    <string name="tile_google_video_search">Video Search</string>
     <string name="tile_imdb">IMDB</string>
     <string name="tile_rottentomatoes">Rotten Tomatoes</string>
     <string name="tile_metacritic">metacritic</string>
