--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -182,4 +182,7 @@
   <string name="your_rights_content3"><![CDATA["Вы не получаете никаких прав или лицензий на товарные знаки Mozilla Foundation или любой из сторон, включая имена или логотипы Mozilla, Firefox или %1$s. Дополнительную информацию можно найти "<a xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2" href="%2$s">&#1079;&#1076;&#1077;&#1089;&#1100;</a>.]]></string>
   <string name="your_rights_content4"><![CDATA["Дополнительный исходный код для %1$s доступен на условиях различных других "<a xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2" href="%2$s">&#1083;&#1080;&#1094;&#1077;&#1085;&#1079;&#1080;&#1081;</a>" для бесплатного и открытого исходного кода."]]></string>
   <string name="your_rights_content5"><![CDATA["%1$s также использует списки блокировки, предоставленные Disconnect, Inc. как отдельные и независимые произведения на условиях "<a xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2" href="%2$s">GNU General Public License v3</a>" и доступные "<a xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2" href="%3$s">&#1079;&#1076;&#1077;&#1089;&#1100;</a>.]]></string>
+  <string name="menu_drawer_home">Домой</string>
+  <string name="settings_cookies_dialog_title">Удалить все куки и данные сайтов</string>
+  <string name="settings_cookies_dialog_content">Выбрав «Удалить сейчас», вы удалите все куки и данные сайтов, хранящиеся в Firefox. Это может привести к разрегистрации вас на веб-сайтах и удалению данных автономных веб-сайтов.</string>
 </resources>
