--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -185,4 +185,11 @@
   <string name="menu_drawer_home">Accueil</string>
   <string name="settings_cookies_dialog_title">Effacer les cookies et les données des sites</string>
   <string name="settings_cookies_dialog_content">En cliquant sur « Effacer maintenant », vous effacerez toutes les données des sites et tous les cookies stockés par Firefox. Cette action peut vous déconnecter de certains sites et supprimer du contenu web disponible hors connexion.</string>
+
+    <!-- Appended by save_robotranslations.py -->
+    <string name="turbo_mode">Mode turbo</string>
+    <string name="onboarding_turbo_mode_title">Le mode turbo vous permet de naviguer plus rapidement</string>
+    <string name="onboarding_turbo_mode_body">Le mode turbo bloque automatiquement les traqueurs et les publicités pour que les pages web se chargent plus vite. S’il y a un hic (comme un site web qui ne fonctionne pas comme vous l’espériez), il vous suffit de désactiver le mode turbo.</string>
+    <string name="onboarding_turbo_mode_button_on">Laisser le mode turbo activé</string>
+    <string name="onboarding_turbo_mode_button_off">Désactiver le mode turbo</string>
 </resources>
