--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -574,7 +574,7 @@ be temporary, and you can try again later.</li>
     <!-- Appended by save_robotranslations.py -->
     <string name="turbo_mode">Turbo Mode</string>
     <string name="onboarding_turbo_mode_title">Turbo Mode helps you browse faster</string>
-    <string name="onboarding_turbo_mode_body">Turbo Mode automatically blocks trackers and ads to help get you where you're going faster. If there's a speed bump – like a site that isn't behaving the way you expect – just turn Turbo Mode off.</string>
+    <string name="onboarding_turbo_mode_body">Turbo Mode automatically blocks trackers and ads to help get you where you\'re going faster. If there\'s a speed bump – like a site that isn\'t behaving the way you expect – just turn Turbo Mode off.</string>
     <string name="onboarding_turbo_mode_button_on">Keep Turbo Mode Enabled</string>
     <string name="onboarding_turbo_mode_button_off">Turn Turbo Mode Off</string>
 </resources>
