--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -190,6 +190,6 @@
     <string name="turbo_mode">Turbo-Modus</string>
     <string name="onboarding_turbo_mode_title">Der Turbo-Modus hilft Ihnen, schneller zu surfen</string>
     <string name="onboarding_turbo_mode_body">Der Turbo-Modus blockiert automatisch Tracker und Anzeigen, damit Sie schneller ans Ziel kommen. Wenn es einen Geschwindigkeitsschub gibt - wie bei einer Website, die sich nicht so verhält, wie Sie es erwarten - schalten Sie einfach den Turbo-Modus aus.</string>
-    <string name="onboarding_turbo_mode_button_on">Verlassen des Turbo-Modus aktiviert</string>
+    <string name="onboarding_turbo_mode_button_on">Turbo Modus aktiviert lassen</string>
     <string name="onboarding_turbo_mode_button_off">Turbo-Modus deaktivieren</string>
 </resources>
