--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -556,17 +556,26 @@ be temporary, and you can try again later.</li>
     <string name="menu_drawer_home">Home</string>
 
     <!-- Home tile strings -->
-    <string name="tile_youtube_tv">YouTube</string>
-    <string name="tile_google_video_search">Video Search</string>
-    <string name="tile_imdb">IMDB</string>
-    <string name="tile_rottentomatoes">Rotten Tomatoes</string>
-    <string name="tile_metacritic">metacritic</string>
-    <string name="tile_fandango">Fandango</string>
 
-    <!-- Name of an American magazine: Does not need to be translated -->
+    <!-- Trademarked brand name: Does not need to be translated -->
+    <string name="tile_youtube_tv">YouTube</string>
+    <!-- Shortcut to a video search engine (Currently Google) -->
+    <string name="tile_google_video_search">Video Search</string>
+    <!-- Trademarked brand name: Does not need to be translated -->
+    <string name="tile_imdb">IMDB</string>
+    <!-- Trademarked brand name: Does not need to be translated -->
+    <string name="tile_rottentomatoes">Rotten Tomatoes</string>
+    <!-- Trademarked brand name: Does not need to be translated -->
+    <string name="tile_metacritic">metacritic</string>
+    <!-- Trademarked brand name: Does not need to be translated -->
+    <string name="tile_fandango">Fandango</string>
+    <!-- Trademarked brand name: Does not need to be translated -->
     <string name="tile_hollywood_reporter">Hollywood Reporter</string>
+    <!-- Trademarked brand name: Does not need to be translated -->
     <string name="tile_flickr">Flickr</string>
+    <!-- Trademarked brand name: Does not need to be translated -->
     <string name="tile_instagram">Instagram</string>
+    <!-- Trademarked brand name: Does not need to be translated -->
     <string name="tile_pinterest">Pinterest</string>
 
     <!-- Settings strings -->
