--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -569,7 +569,7 @@ be temporary, and you can try again later.</li>
     <string name="homescreen_tile_remove">Remove</string>
     <string name="nav_close_hint">Close</string>
 
-    <string name="pin_label">Pin</string>
+    <string name="pin_label">Pin to homescreen</string>
     <string name="notification_pinned_site">Pinned to Firefox TV homescreen</string>
     <string name="notification_unpinned_site">Removed from Firefox TV homescreen</string>
 </resources>
